finish lab1 exercises

--- a/DM2025-Lab1-Homework.ipynb
+++ b/DM2025-Lab1-Homework.ipynb
@@ -5,11 +5,11 @@
    "metadata": {},
    "source": [
     "### Student Information\n",
-    "Name:\n",
+    "Name:張競之\n",
     "\n",
-    "Student ID:\n",
+    "Student ID:M11463005\n",
     "\n",
-    "GitHub ID:"
+    "GitHub ID:Poooowerman"
    ]
   },
   {
